--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,54 @@
 @import url(https://fonts.googleapis.com/css?family=Rambla:bi|DancingScript:i|Tangerine:bi);
 
+@import url(https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap);
+
+
+:root {
+    --bs-primary: #4c9be8;
+    --bs-secondary: #4e5d6c;
+    --bs-light: #abb6c2;
+    --bs-light2: #eaedf1;
+    --bs-dark: #20374c;
+    --bs-body-bg: #0f2537;
+    --bs-body-color: #ebebeb;
+    --bs-border-width: 1px;
+    --bs-border-style: solid;
+    --bs-border-color: #dee2e6;
+    --bs-link-color: #4c9be8;
+    --bs-link-hover-color: #3d7cba;
+    --bs-light-rgb: 171, 182, 194;
+    --bs-dark-rgb: 32, 55, 76;
+    --bs-gray: #868e96;
+    --bs-gray-dark: #343a40;
+    --bs-gray-100: #ebebeb;
+    --bs-gray-200: #4e5d6c;
+    --bs-gray-300: #dee2e6;
+    --bs-gray-400: #ced4da;
+    --bs-gray-500: #adb5bd;
+    --bs-gray-600: #868e96;
+    --bs-gray-700: #495057;
+    --bs-gray-800: #343a40;
+    --bs-gray-900: #212529;
+    --bs-font-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.navbar-dark {
+  --bs-navbar-color: rgba(255, 255, 255, 0.75);
+  --bs-navbar-hover-color: #fff;
+  --bs-navbar-disabled-color: rgba(255, 255, 255, 0.25);
+  --bs-navbar-active-color: #fff;
+  --bs-navbar-brand-color: #fff;
+  --bs-navbar-brand-hover-color: #fff;
+  --bs-navbar-toggler-border-color: rgba(255, 255, 255, 0.1);
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+}
+
+.bg-dark {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important
+}
+
   .text-card-heading1 {
         color: var(--bs-dark)!important;
         font-weight: bolder;
@@ -588,14 +637,3 @@
       --bs-navbar-hover-color: #3d7cba;
       --bs-navbar-active-color: #3d7cba;
   }
-  .rambla-text {
-    font-family: 'Rambla', serif;
-  }
-  .dancing-text {
-      font-family: 'DancingScript', serif;
-  }
-  .tangerine-text {
-    font-family: 'Tangerine', serif;
-    font-size: 48px;
-    text-shadow: 4px 4px 4px #aaa;
-}
