--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -637,3 +637,45 @@
       --bs-navbar-hover-color: #3d7cba;
       --bs-navbar-active-color: #3d7cba;
   }
+    
+.dropdown-menu {
+    --bs-dropdown-min-width: 10rem;
+    --bs-dropdown-padding-x: 0;
+    --bs-dropdown-padding-y: 0.5rem;
+    --bs-dropdown-spacer: 0.125rem;
+    --bs-dropdown-font-size: 1rem;
+    --bs-dropdown-color: #ebebeb;
+    --bs-dropdown-bg: #4e5d6c;
+    --bs-dropdown-border-color: var(--bs-border-color-translucent);
+    --bs-dropdown-border-radius: 0;
+    --bs-dropdown-border-width: 1px;
+    --bs-dropdown-inner-border-radius: -1px;
+    --bs-dropdown-divider-bg: rgba(0, 0, 0, 0.15);
+    --bs-dropdown-divider-margin-y: 0.5rem;
+    --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    --bs-dropdown-link-color: #ebebeb;
+    --bs-dropdown-link-hover-color: #ebebeb;
+    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.075);
+    --bs-dropdown-link-active-color: #fff;
+    --bs-dropdown-link-active-bg: #4c9be8;
+    --bs-dropdown-link-disabled-color: #adb5bd;
+    --bs-dropdown-item-padding-x: 1rem;
+    --bs-dropdown-item-padding-y: 0.25rem;
+    --bs-dropdown-header-color: #868e96;
+    --bs-dropdown-header-padding-x: 1rem;
+    --bs-dropdown-header-padding-y: 0.5rem;
+    position: absolute;
+    z-index: 1000;
+    display: none;
+    min-width: var(--bs-dropdown-min-width);
+    padding: var(--bs-dropdown-padding-y) var(--bs-dropdown-padding-x);
+    margin: 0;
+    font-size: var(--bs-dropdown-font-size);
+    color: var(--bs-dropdown-color);
+    text-align: left;
+    list-style: none;
+    background-color: var(--bs-dropdown-bg);
+    background-clip: padding-box;
+    border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color);
+    border-radius: var(--bs-dropdown-border-radius)
+}
